# glyph_soup

./: .gitignore  AGENTS.md  CLAUDE.md  PRODUCT.md  README.md  STRUCTURE.md  TECH.md  pyproject.toml  research_plan.md  review_unified.md  spec.md  生命の起源とアセンブリ理論レポート.md
.github/workflows/: ci.yml  slow-tests.yml
docs/: README.md
docs/findings/: alphabet_diagnostic_findings.md
docs/research/: research_plan.md
docs/reviews/: review_unified.md
src/glyph_soup/: __init__.py  assembly.py  catalysis.py  chemist.py  config.py  molecule.py  observer.py  reactor.py  simulate.py
src/glyph_soup/experiments/: __init__.py  analyze_cross_alphabet.py  analyze_exp_a.py  analyze_exp_b.py  analyze_exp_c.py  analyze_size_conditioned.py  ceiling_gate.py  exp_a.py  exp_b.py  exp_c.py  transition_detection.py
tests/: conftest.py  test_ablation.py  test_analyze_cross_alphabet.py  test_analyze_exp_a.py  test_analyze_exp_a_calibration.py  test_analyze_exp_b.py  test_assembly.py  test_catalysis.py  test_ceiling_gate.py  test_chemist.py  test_cli_exp_a.py  test_cli_exp_b.py  test_config.py  test_golden_trace.py  test_molecule.py  test_observer_simulate.py  test_reactor.py  test_size_conditioned.py  test_transition_detection.py  test_wilcoxon.py
tests/golden_traces/: README.md  seed_0_exp_a.json
